tests/ui/associated-type-bounds/const-projection-err.gce.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-projection-err.rs:4:26
   |
LL | #![cfg_attr(gce, feature(generic_const_exprs))]
   |                          ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0271]: type mismatch resolving `<T as TraitWAssocConst>::A == 1`
  --> $DIR/const-projection-err.rs:14:11
   |
LL |     foo::<T>();
   |           ^ expected `0`, found `1`
   |
note: required by a bound in `foo`
  --> $DIR/const-projection-err.rs:11:28
   |
LL | fn foo<T: TraitWAssocConst<A = 1>>() {}
   |                            ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
